ML Project: Online Payment Fraud Detection

--- a/ML_Project_Online_Payment_Fraud_Detection.ipynb
+++ b/ML_Project_Online_Payment_Fraud_Detection.ipynb
@@ -1581,6 +1581,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelimizi değerlendirmek için Karmaşıklık Matrisi ve Sınıflandırma Raporu oluşturarak sonuçları inceliyorum."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
