ML Project: Online Payment Fraud Detection

--- a/ML_Project_Online_Payment_Fraud_Detection.ipynb
+++ b/ML_Project_Online_Payment_Fraud_Detection.ipynb
@@ -49,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**GÖZETİMLİ ÖĞRENME (SUPERVISED LEARNING)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -305,6 +312,7 @@
    "metadata": {},
    "source": [
     "Kullandığım veri seti: https://www.kaggle.com/datasets/rupakroy/online-payments-fraud-detection-dataset\n",
+    "\n",
     "Veri setinin içerdiği verilerde bulunan özellikler şu şekilde:\n",
     "* step: 1 işlemin 1 saate eşit olduğu bir zaman birimini temsil eder\n",
     "* type: çevrimiçi işlem türü\n",
